--- a/style/main.css
+++ b/style/main.css
@@ -6,8 +6,6 @@ html {
 body {
 	font-family: Ubuntu, Arial, "Lucida Grande", sans-serif;
 	margin-top: 3.5rem;
-    color: #333;
-    /*background-image: url(../media/backgrounds/bg-darker.gif);*/
 }
 svg {
 	width: 100%;
@@ -16,24 +14,15 @@ svg {
 iframe {
 	width: 100%;
 }
-
-/*Text and general formatting*/
 nav a, main a {
 	text-decoration: none;
 	transition: text-shadow 0.1s linear;
 }
-nav a:hover {
-	text-shadow: 1px 1px 2px black;
-}
-
 code {
 	width: 99%;
 	display: block;
 	overflow-x: hidden;
-	/*overflow-y: hidden;*/
 }
-
-/*Blocks and container formatting*/
 header {
 	width: 100%;
 	height: 4rem;
@@ -42,18 +31,13 @@ header {
 	left: 0;
 	right: 0;
 	z-index: 1;
-	
 	text-align: center;
-	
-	/*box-shadow: 3px 3px 5px #888888;*/
 }
 header img {
     margin-top: 0.1rem;
     height: 3.8rem;
 }
 article {
-	background-color: white;
-	box-shadow: 3px 3px 5px #888888;
 	padding: 1rem;
 	margin: 1rem 0;
 	overflow-wrap: break-word;
@@ -79,7 +63,6 @@ article {
 	bottom: 0;
 	left: 0;
 	right: 0;
-	background-color: rgba(0, 0, 0, 0.45);
 }
 .curtain-closed {
 	opacity: 1;
@@ -92,18 +75,15 @@ article {
     transition: opacity 0.3s linear;
 }
 header a {
-	color: #9AB849;
 	font-size: 2.5rem;
 	font-weight: bold;
 	text-decoration: none;
 	display: inline;
 	box-sizing: border-box;
 	width: 100%;
-	/*margin-left: 4rem;*/
 }
 nav {
 	position: absolute;
-	box-shadow: 3px 3px 5px #888888;
 }
 nav {
 	width: 20rem;
@@ -126,12 +106,6 @@ nav {
     z-index: 0;
     transition: opacity 0.3s linear;
 }
-nav a:not([rel="license"]) {
-	color: black;
-}
-/*nav a:not([rel="license"])::before {
-	content: "► ";
-}*/
 nav ul {
 	list-style: none;
 	padding: 0.5rem;
@@ -160,8 +134,6 @@ section {
 	overflow-x: auto;
 	overflow-y: hidden;
 }
-
-/* Image caption */
 figure {
 	display: inline-block;
 }
@@ -172,74 +144,31 @@ figure img {
 figure figcaption {
 	text-align: center;
 }
-
-/*table {
-	border-collapse: collapse;
-	width: 100%;
-	border-spacing: 0;
-	border-radius: 10px;
-}
-td, th {
-	border: 0.3em solid grey;
-	border-spacing: 0;
-}*/
-
 button, input[type="submit"], input[type="file"], input[type="button"], a.button {
-	background-color: white;
-	border: 1px solid white;
 	border-radius: 1px;
-	/*box-shadow: 1px 1px 5px #888888;*/
 	margin: 8px 8;
 	padding: 8px 8px;
-	
 	height: 36px;
 	min-width: 64px;
-	
-	color: #333;
 	font-family: inherit;
 	font-size: inherit;
 	font-weight: bold;
-}
-button:hover, input[type="submit"]:hover, input[type="file"]:hover, input[type="button"]:hover, a.button:hover {
-	box-shadow: 3px 3px 5px #888888;
-}
-button:active {
-	box-shadow: 6px 6px 5px #888888;
 }
 select {
-	background-color: transparent;
-	border-top: 1px solid gray;
-	border-bottom: 1px solid gray;
-	border-left-color: transparent;
-	border-right-color: transparent;
 	margin: 8px 0;
 	padding: 4px 16px 4px 14px;
-	
 	min-height: 36px;
 	min-width: 64px;
-	
-	color: #333;
 	font-family: inherit;
 	font-size: inherit;
 	font-weight: bold;
 }
-select:hover {
-	background-color: white;
-}
 select:focus {
-	border: 1px solid white;
 	border-radius: 1px;
-	box-shadow: 1px 1px 5px #888888;
 }
 option {
-	background-color: white;
-	
 	padding: 12px 6px 12px 14px;
 }
-option:hover {
-	background-color: lightgray;
-}
-
 /* Tables */
 /*table tr:first-child th:first-child, table tr:first-child td:first-child {
 	border-top-left-radius: 10px;
@@ -272,8 +201,7 @@ div.box {
     width: 100%;
     margin-top: 1rem;
     min-height: 10rem;
-    height: 30%;
-    /*padding-top: 2%;*/
+    height: 13rem;
 }
 .imgBox, company-logo-div {
     height: 80%;
@@ -284,28 +212,19 @@ div.box {
     max-width: calc(100% - 4%);
     width: auto;
     display: block;
-    /*margin-top: 5%;*/
     margin-left: auto;
     margin-right: auto;
     padding-top: 2%;
 }
-/*.box p {
-    text-align: center;
-}*/
 .box span {
     display: flex;
     align-items: center;
     justify-content: center;
-    color: #fff;
     font-size: 1.3rem;
 }
-/*.box:first-child {
-    margin-top: 5%;
-}*/
 .separator-div {
     width: 100%;
     height: 0.6rem;
-    background-color: rgba(0,0,0,0.15);
     margin-top: -0.6rem;
 }
 .box-container {
@@ -316,13 +235,15 @@ div.box {
     position: absolute;
     margin-top: 0.7rem;
     margin-left: -2rem;
-    /*margin-right: 1rem;*/
-    /*margin-right: 1rem;*/
-    /*line-height: 2.5;*/
-    /*font-size: 28px;*/
+}
+.box, .separator-div {
+    transition: transform 0.2s linear;
+}
+.box:hover, .separator-div:hover {
+    transform: translateY(-3px);
+    transition: transform 0.2s linear;
 }
 li a {
-    /*line-height: 1.5;*/
     margin-left: 2rem;
 }
 li {
@@ -374,7 +295,6 @@ li {
 }
 #language-popup a {
     text-decoration: none;
-    color: #333;
 }
 #bg-language {
     width: 100%;
@@ -402,19 +322,13 @@ li {
     height: 30rem;
 }
 #description-popup td {
-    color: #333;
     padding-left: 0.5rem;
     padding-right: 0.5rem;
-    /*border-bottom: 1px solid rgba(143, 145, 148, 0.15);*/
-}
-#description-popup th, #description-popup td {
-    /*background-color: #efeff0;*/
 }
 .company-logo-div {
     width: 100%;
     margin-top: 1rem;
     min-height: 5rem;
-    /*height: 5%;*/
     padding-top: 2%;
     padding-bottom: 2%;
 }
@@ -443,23 +357,15 @@ li {
 .strike-box p {
     display: inline;
     font-size: 1.5rem;
-    color: #fff;
 }
-/*#when-where-tag, #guaranteed-routes-div {
-    font-family: 'Pompiere', cursive;
-    font-size: 1.9rem;
-    font-weight: bold;
-}*/
 .first-separator-div {
     width: 100%;
     height: 0.3rem;
-    background-color: rgba(0,0,0,0.15);
     margin-top: -0.3rem;
 }
 .second-separator-div {
     width: 100%;
     height: 0.6rem;
-    background-color: rgba(0,0,0,0.35);
     margin-top: -0.6rem;
 }
 #dropdown-menu {
@@ -470,38 +376,22 @@ li {
     margin: auto;
 }
 #dropdown-menu select {
-    background-color: #a7c712;
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
 }
 #dropdown-menu label {
     font-weight: bold;
-    background-color: #a7c712;
     padding: 0.5rem;
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
-}
-#dropdown-menu select, #dropdown-menu label {
-    border: 1px solid transparent;
-    color: #fff;
-}
-#dropdown-menu option {
-    background-color: #a7c712;
 }
 #guaranteed-routes-div {
     padding-top: 1rem;
     padding-bottom: 1rem;
     width: 100%;
-    background-color: #a7c712;
     text-align: center;
 }
 #guaranteed-routes-div a {
-    /*margin-top: 1rem;
-    margin-bottom: 1rem;*/
-    /*border: 1px solid transparent;
-    border-radius: 5px;*/
-    /*background-color: #a7c712;*/
-    color: #fff;
     padding: 0.5rem;
     font-size: 1.5rem;
 }
@@ -510,40 +400,27 @@ li {
     margin-right: 3rem;
 }
 .about-div h3 {
-    color: #333;
     font-size: 2rem;
 }
 #contact, #school {
     font-weight: bold;
 }
 .strike-box-desktop table {
-    color: #fff;
     border-collapse: collapse;
     width: 100%;
 }
 .strike-box-desktop th {
-    background-color: #efeff0;
     font-size: 1.2rem;
-    color: #333;
-    border-top: 1px solid rgba(143, 145, 148, 0.15);
 }
 .strike-box-desktop th:last-child {
     border-collapse: collapse;
 }
 .strike-box-desktop th, .strike-box-desktop td {
-    border-bottom: 1px solid #efeff0;
     padding: 0.9rem;
-    border-right: 1px solid rgba(143, 145, 148, 0.15);
     text-align: center;
 }
 .strike-box-desktop td:nth-last-of-type(-n+2) {
     text-align: left;
-}
-.strike-box-desktop tr:nth-child(even) {
-    background-color: #a7c712;
-}
-.strike-box-desktop tr:nth-child(odd) {
-    background-color: #849824;
 }
 .strike-box-desktop {
     display: none;
@@ -559,3 +436,7 @@ li {
     font-size: 5vh !important;
     margin-top: 0%;
 }
+/*.size-up-span {Klasse für span in .box zu vergeben wenn img tag entfernt wird
+    font-size: 3rem !important;
+    padding-top: 4rem;
+}*/
